# GOReverseLookup

./: .gitignore  GOReverseLookup.spec  README.md  dev_usage_commands.txt  main.py  pyproject.toml  readme-old.txt  run.py  setup.py  supported_organisms.json
.github/workflows/: publish_release.yml  python-publish-testpypi.yml  test_on_push.yml
app/goreverselookup/: __init__.py
app/goreverselookup/src/: Model.py  Workflows.py  src_test.py
app/goreverselookup/src/core/: Metrics.py  ModelSettings.py  miRNA.py
app/goreverselookup/src/parse/: GOAFParser.py  OBOParser.py  OrthologParsers.py
app/goreverselookup/src/util/: CacheUtil.py  FileUtil.py
app/goreverselookup/src/web_apis/: EnsemblApi.py  GOApi.py  UniprotApi.py
app/goreverselookup/test_dev/: dev_workflows_test.py
exe_version/: main_model_exe.py  main_model_exe_wrapper.py
exe_version/input_files/: input.txt
input_files/: input.txt  inputOS2-2.txt  input_rhartritis_noortho.txt  input_rhartritis_ortho.txt
input_files/chronic-infl_cancer/with_IEA/: input_IEA+_ind-ann_p=0.05.txt  input_IEA+_ind-ann_p=5e-8.txt  input_IEA+_no-ind-ann_p=0.05.txt  input_IEA+_no-ind-ann_p=5e-8.txt
input_files/chronic-infl_cancer/without_IEA/: input _IEA-_ind-ann_p=0.05.txt  input_IEA-_ind-ann_p=5e-8.txt  input_IEA-_no-ind-ann_p=0.05.txt  input_IEA-_no-ind-ann_p=5e-8.txt
installer/windows/: GOReverseLookup_Launch.bat
log_output/: goterm_product_mismatches.txt
nottests/: no_test_compare_results.py  no_test_count_results.py  no_test_display_goterms.py  no_test_main_model.py  no_test_score_contingency.py  no_test_score_existing.py
research_models/BT_fish-growth/: input.txt
research_models/BT_grape/: input.txt
research_models/BT_lactation/: input.txt
research_models/BT_plant-draught/: input.txt
research_models/BT_plant-draught/results/: data.json  stat_rev_genes.xlsx  statistically_relevant_genes.json
research_models/MRKH/: input.txt
research_models/chronic-inflammation_cancer/: input.txt  input_indirect-annotations,IEA+,p=5e-08.txt  input_indirect-annotations,IEA-,p=5e-08.txt  input_no-indirect-annotations,IEA+,p=0.05.txt  input_no-indirect-annotations,IEA-,p=0.05.txt
research_models/chronic-inflammation_cancer/IEA+/ind_ann,p=0.05,IEA+ (145)/: Supplemental_Table_S4 (ind-ann,p=0.05,IEA+; 145 genes).xlsx  input.txt
research_models/chronic-inflammation_cancer/IEA+/ind_ann,p=5e-8,IEA+ (110)/: input.txt
research_models/chronic-inflammation_cancer/IEA+/no_ind_ann,p=0.05,IEA+ (13)/: input.txt
research_models/chronic-inflammation_cancer/IEA+/no_ind_ann,p=5e-8,IEA+ (0)/: input.txt
research_models/osteosarcopenia/: input.txt
research_models/osteosarcopenia/results/: stat_rev_genes.xlsx  statistically_relevant_genes.json
research_models/rheumatoid-arthritis/: input_rhartritis_noortho.txt  input_rhartritis_ortho.txt
scripts/: get_supported_organisms.py  rescore_model.py  reverse_lookup_study.py
src/goreverselookup/: Model.py  Workflows.py  __init__.py  __init__2.py  associations.py  geneinfo.py  main_cli.py  multiple_testing.py  ontology.py  ortholog.py  reverse_lookup.py  utils.py
src/goreverselookup/core/: GOTerm.py  Metrics.py  ModelSettings.py  ModelStats.py  Product.py  Report.py
src/goreverselookup/parse/: GOAFParser.py  OBOParser.py  OrthologParsers.py
src/goreverselookup/util/: ApiUtil.py  CacheUtil.py  FileUtil.py  GProfiler.py  JsonUtil.py  LogConfigLoader.py  Timer.py  WebsiteParser.py
src/goreverselookup/web_apis/: EnsemblApi.py  GOApi.py  GProfiler.py  UniprotApi.py  gProfilerApi.py
tests/: conftest.py  main_model_test.py  main_workflows_test.py  no_test_main_model.py  no_test_main_model_rh-arthritis.py  no_test_main_workflows.py  no_test_playground.py  test.py  test_associations.py  test_geneinfo.py  test_gprofilerapi.py  test_input.txt  test_main_model.py  test_main_workflows.py  test_model.py  test_multiple_testing.py  test_ontology.py  test_ortholog.py  test_playground.py  test_pvalcalc.py  test_reverse_lookup.py  test_utils.py  test_webapis.py
tests/data/: input.txt
(+18 files in other folders)
