[build-system]
requires = ["setuptools", "setuptools-scm", "aiohttp", "asyncio", "tqdm", "requests", "scipy", "networkx", "tabulate"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "goreverselookup"
authors = [
    {name = "Aljoša Škorjanc", email = "skorjanc.aljosa@gmail.com"},
    {name = "Vladimir Smrkolj", email = "vladimir.smrkolj@gmail.com"},
]
description = "Python library for Gene Ontology Reverse Lookup"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["gene ontology", "reverse lookup"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy",
    "scipy",
    "aiohttp",
    "tqdm",
    "requests",
    "networkx",
    "tabulate",
]

version = "0.0.0"
#dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "tox",
]

#
#[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
#
#[project.scripts]
#spam-cli = "spam:main_cli"

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
    tox>=4
env_list = lint, type, format, check-manifest, py310, py311

[gh-actions]
python =
    3.10: py310
    3.11: py310, lint, type, format, check-manifest

[testenv]
description = run unit tests
deps =
    pytest>=7
    pytest-sugar
commands =
    pytest {posargs:tests}

[testenv:format]
description = run formatters
skip_install = true
deps =
    black
commands = black --check --diff {posargs:.}

[testenv:lint]
description = run linters
skip_install = true
deps =
    ruff
commands = ruff check {posargs:.}

[testenv:check-manifest]
description = run check-manifest
skip_install = true
deps =
    check-manifest
commands = check-manifest

[testenv:type]
description = run type checks
deps =
    mypy
commands =
    mypy --strict {posargs:src tests}
"""

[tool.check-manifest]
ignore = ["tests/**", ".vscode/**", "logging_config.json", "exe_version/**", "input_files/**"]